--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -8,20 +8,46 @@ on:
 jobs:
   build-aab:
     runs-on: ubuntu-latest
+    env:
+      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
+      ANDROID_HOME: ${{ runner.temp }}/android-sdk
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-      - uses: subosito/flutter-action@v2
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: stable
-      - run: flutter pub get
+
+      - name: Prepare Android SDK
+        run: |
+          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+          curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -o cmdtools.zip
+          unzip -q cmdtools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
+          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" "$ANDROID_SDK_ROOT/cmdline-tools/latest"
+          yes | "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --licenses
+          "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" \
+            "platform-tools" \
+            "platforms;android-35" \
+            "build-tools;35.0.0" \
+            "ndk;27.0.12077973"
+
+      - name: Flutter pub get
+        run: flutter pub get
+
       - name: Restore keystore from secret
         run: echo "$KEYSTORE_BASE64" | base64 -d > $HOME/easyplaylists.jks
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+
       - name: Write android/key.properties
         run: |
           cat > android/key.properties <<EOF
@@ -30,9 +56,16 @@ jobs:
           keyAlias=${{ secrets.KEY_ALIAS }}
           storeFile=${{ env.HOME }}/easyplaylists.jks
           EOF
+
+      # Optional: show doctor output for easier debugging
+      - name: Flutter doctor (debug info)
+        run: flutter doctor -v
+
       - name: Build AAB (release, light flags)
         run: flutter build appbundle --release --no-shrink --no-tree-shake-icons
-      - uses: actions/upload-artifact@v4
+
+      - name: Upload AAB artifact
+        uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
           path: build/app/outputs/bundle/release/app-release.aab
