--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -22,12 +22,12 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Setup Flutter
+      - name: Setup Flutter (stable)
         uses: subosito/flutter-action@v2
         with:
           channel: stable
 
-      - name: Prepare Android SDK
+      - name: Prepare Android SDK / NDK
         run: |
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -o cmdtools.zip
@@ -57,7 +57,20 @@ jobs:
           storeFile=${{ env.HOME }}/easyplaylists.jks
           EOF
 
-      # Optional: show doctor output for easier debugging
+      # ----- Preflight checks (helps catch bad secrets fast) -----
+      - name: Verify keystore restored & passwords
+        run: |
+          ls -l $HOME/easyplaylists.jks
+          keytool -list -v -keystore $HOME/easyplaylists.jks -storepass "${{ secrets.KEYSTORE_PASSWORD }}" | sed -n '1,20p'
+
+      - name: Show sanitized key.properties
+        run: |
+          sed -e 's/storePassword=.*/storePassword=****/' \
+              -e 's/keyPassword=.*/keyPassword=****/' \
+              -e 's/storeFile=.*/storeFile=(redacted)/' \
+              android/key.properties || true
+      # ------------------------------------------------------------
+
       - name: Flutter doctor (debug info)
         run: flutter doctor -v
 
