--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build-aab:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
-      ANDROID_HOME: ${{ runner.temp }}/android-sdk
 
     steps:
       - name: Checkout
@@ -27,14 +24,20 @@ jobs:
         with:
           channel: stable
 
+      - name: Set Android SDK env
+        run: |
+          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          mkdir -p "$HOME/android-sdk/cmdline-tools"
+
       - name: Prepare Android SDK / NDK
         run: |
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+          cd "$HOME/android-sdk/cmdline-tools"
           curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -o cmdtools.zip
-          unzip -q cmdtools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
-          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-          yes | "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --licenses
-          "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" \
+          unzip -q cmdtools.zip
+          mv cmdline-tools latest
+          yes | "$HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager" --licenses
+          "$HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager" \
             "platform-tools" \
             "platforms;android-35" \
             "build-tools;35.0.0" \
@@ -57,7 +60,7 @@ jobs:
           storeFile=${{ env.HOME }}/easyplaylists.jks
           EOF
 
-      # ----- Preflight checks (helps catch bad secrets fast) -----
+      # ----- Preflight checks -----
       - name: Verify keystore restored & passwords
         run: |
           ls -l $HOME/easyplaylists.jks
@@ -69,7 +72,7 @@ jobs:
               -e 's/keyPassword=.*/keyPassword=****/' \
               -e 's/storeFile=.*/storeFile=(redacted)/' \
               android/key.properties || true
-      # ------------------------------------------------------------
+      # ----------------------------
 
       - name: Flutter doctor (debug info)
         run: flutter doctor -v
