--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: easy_playlists
-description: A music playlist creation app
+name: playlist_city
+description: A Flutter app for creating and managing playlists
 version: 1.0.0
 environment:
   sdk: ">=2.18.0 <3.0.0"
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.2.3
   path_provider: ^2.1.3
   share_plus: ^7.2.2
+  change_app_package_name: ^1.5.0
 
 flutter:
   uses-material-design: true
