--- a/.github/workflows/android-debug-apk.yml
+++ b/.github/workflows/android-debug-apk.yml
@@ -3,42 +3,98 @@ name: Android Debug APK
 on:
   workflow_dispatch:
   push:
+    branches: [ main ]
     paths:
+      - "android/**"
       - "lib/**"
       - "pubspec.yaml"
-      - "android/**"
       - ".github/workflows/android-debug-apk.yml"
 
 jobs:
-  build-apk:
+  build-aab:
+    name: Build Debug APK
     runs-on: ubuntu-latest
+    timeout-minutes: 45
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Setup JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: "17"
+          cache: gradle
 
-      - name: Setup Flutter
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Accept SDK Licenses & Install Tools
+        shell: bash
+        run: |
+          yes | "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --licenses
+          "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" \
+            "platform-tools" \
+            "platforms;android-35" \
+            "build-tools;34.0.0" \
+            "cmake;3.22.1" \
+            "ndk;27.0.12077973"
+
+      - name: Install Flutter (stable)
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.8"
+          channel: stable
+          cache: true
 
-      - name: Flutter pub get
-        run: flutter pub get
+      - name: Flutter doctor (sanity)
+        run: flutter doctor -v
 
-      - name: Accept Android licenses
-        run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+      - name: Flutter pub get (with retry)
+        env:
+          PUB_ENVIRONMENT: "github.ci"
+        run: |
+          set -e
+          for i in 1 2 3; do
+            if flutter pub get; then
+              exit 0
+            fi
+            echo "pub get failed, retrying in $((i*15))s…"
+            sleep $((i*15))
+          done
+          echo "pub get failed after retries"
+          exit 1
 
-      - name: Build debug APK (no shrink, no icon tree-shake)
-        run: flutter build apk --debug --no-shrink --no-tree-shake-icons
+      - name: Ensure gradlew executable
+        working-directory: android
+        run: chmod +x ./gradlew
 
-      - name: Upload APK artifact
+      - name: Build debug APK (with retries)
+        working-directory: android
+        env:
+          GRADLE_OPTS: "-Dorg.gradle.internal.http.socketTimeout=120000 -Dorg.gradle.internal.http.connectionTimeout=120000"
+        run: |
+          set -e
+          tries=4
+          for i in $(seq 1 $tries); do
+            echo "Attempt $i of $tries…"
+            if ./gradlew --no-daemon --stacktrace --warning-mode all :app:assembleDebug; then
+              echo "Build succeeded on attempt $i"
+              break
+            fi
+            if [ "$i" -lt "$tries" ]; then
+              sleep $((30*i))
+            else
+              echo "Build failed after $tries attempts"
+              exit 1
+            fi
+          done
+
+      - name: Upload debug APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: build/app/outputs/flutter-apk/app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
+          if-no-files-found: error
