Theme, splash, icons, screens; add Android Debug APK workflow

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,13 @@
-org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx640m -XX:MaxMetaspaceSize=320m -Dfile.encoding=UTF-8
 org.gradle.workers.max=1
 org.gradle.daemon=false
 org.gradle.unsafe.configuration-cache=false
+org.gradle.vfs.watch=false
+
 android.useAndroidX=true
 android.enableJetifier=false
-kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=384m
+
+# Keep AAPT/AAPT2 light
+android.aapt2.daemon=true
+android.aapt2.daemon.max-heap=192m
+android.experimental.disableResourceValidation=true
