--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: playlist_city
-description: A Flutter app for creating and managing playlists
-version: 1.0.0
+description: A Flutter app for creating and saving music playlists
+publish_to: 'none'
+
 environment:
   sdk: ">=2.18.0 <3.0.0"
 
@@ -15,9 +16,26 @@ dependencies:
   shared_preferences: ^2.2.3
   path_provider: ^2.1.3
   share_plus: ^7.2.2
-  change_app_package_name: ^1.5.0
+  flutter_native_splash: ^2.4.6
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/branding/icon.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/branding/icon.png"
+
+flutter_native_splash:
+  color: "#004d40"   # dark green background
+  image: assets/branding/icon.png
+  android: true
+  ios: true
