Harden Android Debug APK CI (SDK/NDK retries, memory, paths)

--- a/.github/workflows/android-debug-apk.yml
+++ b/.github/workflows/android-debug-apk.yml
@@ -11,10 +11,19 @@ on:
       - ".github/workflows/android-debug-apk.yml"
 
 jobs:
-  build-aab:
+  build-apk:
     name: Build Debug APK
     runs-on: ubuntu-latest
     timeout-minutes: 45
+
+    env:
+      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
+      ANDROID_HOME: ${{ runner.temp }}/android-sdk
+      JAVA_TOOL_OPTIONS: -Xmx2g -XX:MaxMetaspaceSize=512m
+      _JAVA_OPTIONS: -Xmx2g
+      GRADLE_OPTS: -Dorg.gradle.jvmargs="-Xmx2g -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8" -Dorg.gradle.daemon=false
+      # Speed up Gradle resolution:
+      GRADLE_USER_HOME: ${{ runner.temp }}/.gradle
 
     steps:
       - name: Checkout
@@ -29,81 +38,76 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Install Android SDK (cmdline-tools) + accept licenses
+        run: |
+          set -eux
+          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
+          curl -L -o cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
+          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" "$ANDROID_SDK_ROOT/cmdline-tools/latest"
+          yes | "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --licenses
 
-- name: Accept SDK Licenses & Install Tools (tolerant)
-  shell: bash
-  run: |
-    set -e
+      - name: Install platforms/build-tools/NDK (with retries)
+        run: |
+          set -eux
+          install() {
+            "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" \
+              "platform-tools" \
+              "platforms;android-35" \
+              "build-tools;35.0.0" \
+              "cmake;3.22.1" \
+              "ndk;27.0.12077973"
+          }
+          install || install || install
 
-    # Accept licenses, but don't fail the job if 'yes' breaks the pipe.
-    set +e
-    yes | "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --licenses
-    lic_status=$?
-    echo "sdkmanager --licenses exit code: ${lic_status} (will ignore non-zero)"
-    set -e
-
-    # Now install the required packages
-    "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" \
-      "platform-tools" \
-      "platforms;android-35" \
-      "build-tools;34.0.0" \
-      "cmake;3.22.1" \
-      "ndk;27.0.12077973"
+      - name: Cache Flutter SDK
+        id: flutter-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.flutter-sdk
+          key: flutter-stable-3.32.x
 
       - name: Install Flutter (stable)
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          cache: true
+        if: steps.flutter-cache.outputs.cache-hit != 'true'
+        run: |
+          set -eux
+          git clone https://github.com/flutter/flutter.git ~/.flutter-sdk
+          cd ~/.flutter-sdk
+          git checkout stable
+          ./bin/flutter --version
+
+      - name: Add Flutter to PATH
+        run: echo "${HOME}/.flutter-sdk/bin" >> $GITHUB_PATH
 
       - name: Flutter doctor (sanity)
         run: flutter doctor -v
 
-      - name: Flutter pub get (with retry)
-        env:
-          PUB_ENVIRONMENT: "github.ci"
+      - name: Flutter pub get (with retries)
         run: |
-          set -e
-          for i in 1 2 3; do
-            if flutter pub get; then
-              exit 0
-            fi
-            echo "pub get failed, retrying in $((i*15))s…"
-            sleep $((i*15))
-          done
-          echo "pub get failed after retries"
-          exit 1
+          set -eux
+          flutter pub get || flutter pub get || flutter pub get
 
-      - name: Ensure gradlew executable
-        working-directory: android
-        run: chmod +x ./gradlew
-
-      - name: Build debug APK (with retries)
-        working-directory: android
-        env:
-          GRADLE_OPTS: "-Dorg.gradle.internal.http.socketTimeout=120000 -Dorg.gradle.internal.http.connectionTimeout=120000"
+      - name: Verify assets exist (avoid “unable to find directory entry”)
         run: |
-          set -e
-          tries=4
-          for i in $(seq 1 $tries); do
-            echo "Attempt $i of $tries…"
-            if ./gradlew --no-daemon --stacktrace --warning-mode all :app:assembleDebug; then
-              echo "Build succeeded on attempt $i"
-              break
-            fi
-            if [ "$i" -lt "$tries" ]; then
-              sleep $((30*i))
-            else
-              echo "Build failed after $tries attempts"
-              exit 1
-            fi
-          done
+          set -eux
+          test -f pubspec.yaml
+          # If you reference specific files, ensure they exist; otherwise skip
+          # Example checks:
+          # test -f assets/branding/icon.png || echo "icon not found (ok if not referenced explicitly)"
 
-      - name: Upload debug APK artifact
+      - name: Build Debug APK (retry on flaky network/gradle)
+        run: |
+          set -eux
+          # ensure Gradle wrapper is executable
+          chmod +x android/gradlew
+          # set NDK version in case plugins require it
+          sed -i 's|ndkVersion = .*|ndkVersion = "27.0.12077973"|' android/app/build.gradle.kts || true
+          # retry build up to 2 times if needed
+          ./android/gradlew -p android :app:assembleDebug --no-daemon --stacktrace \
+            || ./android/gradlew -p android :app:assembleDebug --no-daemon --stacktrace
+
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk
-          if-no-files-found: error
+          path: android/app/build/outputs/apk/debug/*.apk
