--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,13 +1,7 @@
-org.gradle.jvmargs=-Xmx640m -XX:MaxMetaspaceSize=320m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8
 org.gradle.workers.max=1
 org.gradle.daemon=false
-org.gradle.unsafe.configuration-cache=false
-org.gradle.vfs.watch=false
-
 android.useAndroidX=true
 android.enableJetifier=false
-
-# Keep AAPT/AAPT2 light
-android.aapt2.daemon=true
-android.aapt2.daemon.max-heap=192m
-android.experimental.disableResourceValidation=true
+org.gradle.unsafe.configuration-cache=false
+kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=384m
