--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -4,96 +4,86 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+    paths:
+      - "android/**"
+      - "lib/**"
+      - "pubspec.yaml"
+      - ".github/workflows/android-aab.yml"
 
 jobs:
   build-aab:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+    env:
+      # Give Java/Gradle more headroom on the runner
+      JAVA_TOOL_OPTIONS: "-Xmx3g -XX:MaxMetaspaceSize=768m"
+      _JAVA_OPTIONS: "-Xmx3g -XX:MaxMetaspaceSize=768m"
+      # Flutter can be chatty with RAM during gen/build
+      GRADLE_OPTS: "-Dorg.gradle.jvmargs='-Xmx3g -XX:MaxMetaspaceSize=768m' -Dkotlin.daemon.jvm.options='-Xmx1g -XX:MaxMetaspaceSize=512m'"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Setup Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: "17"
+          cache: gradle
 
-      - name: Setup Flutter (stable)
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          packages: |
+            platform-tools
+            platforms;android-34
+            build-tools;34.0.0
+            cmake;3.22.1
+            ndk;27.0.12077973
+
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          cache: true
 
-      - name: Set Android SDK env
+      - name: Show tool versions
         run: |
-          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-          mkdir -p "$HOME/android-sdk/cmdline-tools"
+          flutter --version
+          java -version
+          echo "ANDROID_HOME=$ANDROID_HOME"
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
 
-      - name: Prepare Android SDK / NDK
+      # Make Gradle conservative (single worker, no daemon) and disable shrinkers
+      - name: Write CI gradle.properties
         run: |
-          cd "$HOME/android-sdk/cmdline-tools"
-          curl -sSL https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -o cmdtools.zip
-          unzip -q cmdtools.zip
-          mv cmdline-tools latest
-          yes | "$HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager" --licenses
-          "$HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager" \
-            "platform-tools" \
-            "platforms;android-35" \
-            "build-tools;35.0.0" \
-            "ndk;27.0.12077973" \
-            "cmake;3.22.1"
+          cat > android/gradle.properties <<'PROPS'
+          org.gradle.jvmargs=-Xmx3g -XX:MaxMetaspaceSize=768m -Dfile.encoding=UTF-8
+          org.gradle.workers.max=1
+          org.gradle.daemon=false
+          org.gradle.unsafe.configuration-cache=false
+          android.useAndroidX=true
+          android.enableJetifier=false
+          kotlin.daemon.jvmargs=-Xmx1g -XX:MaxMetaspaceSize=512m
+          PROPS
+          echo "wrote android/gradle.properties:"
+          cat android/gradle.properties
 
-      # --- Keystore & signing props (stored inside repo/android) ---
-      - name: Restore keystore from secret (into repo/android)
+      - name: flutter pub get
+        run: flutter pub get
+
+      # ✅ Build the AAB with reduced memory pressure
+      #    (no shrinking, no icon tree-shake; limit ABIs to arm64 for now)
+      - name: Build AAB (release)
         run: |
-          mkdir -p "${{ github.workspace }}/android"
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > "${{ github.workspace }}/android/easyplaylists.jks"
-          ls -l "${{ github.workspace }}/android/easyplaylists.jks"
-
-      - name: Write android/key.properties
-        run: |
-          cat > android/key.properties <<EOF
-          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
-          keyPassword=${{ secrets.KEY_PASSWORD }}
-          keyAlias=${{ secrets.KEY_ALIAS }}
-          storeFile=${{ github.workspace }}/android/easyplaylists.jks
-          EOF
-          echo "----- key.properties (sanitized) -----"
-          sed -e 's/storePassword=.*/storePassword=****/' \
-              -e 's/keyPassword=.*/keyPassword=****/' \
-              -e 's@storeFile=.*@storeFile=(repo)/android/easyplaylists.jks@' \
-              android/key.properties
-
-      # --- Quick project sanity checks ---
-      - name: Print repo layout (debug)
-        run: |
-          pwd
-          ls -la
-          ls -la android || true
-          ls -la android/app || true
-
-      - name: Preflight keystore check (storepass, alias, keypass)
-        run: |
-          set -e
-          echo "Checking store password..."
-          keytool -list -v \
-            -keystore "${{ github.workspace }}/android/easyplaylists.jks" \
-            -storepass "${{ secrets.KEYSTORE_PASSWORD }}" | sed -n '1,20p'
-
-          echo "Checking alias and key password..."
-          keytool -list -v \
-            -keystore "${{ github.workspace }}/android/easyplaylists.jks" \
-            -storepass "${{ secrets.KEYSTORE_PASSWORD }}" \
-            -alias "${{ secrets.KEY_ALIAS }}" \
-            -keypass "${{ secrets.KEY_PASSWORD }}" | sed -n '1,20p'
-
-      - name: Flutter doctor (debug info)
-        run: flutter doctor -v
-
-      # --- Build the AAB with Flutter (keeps things simple) ---
-      - name: Build AAB (release, light flags)
-        run: flutter build appbundle --release --no-shrink --no-tree-shake-icons
+          flutter build appbundle \
+            --release \
+            --no-shrink \
+            --no-tree-shake-icons \
+            --target-platform=android-arm64
 
       - name: Upload AAB artifact
         uses: actions/upload-artifact@v4
