--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,21 +1,30 @@
-      - name: Retry: Set up Android SDK + install packages
-        uses: nick-fields/retry@v3
-        with:
-          max_attempts: 3
-          retry_on: error
-          timeout_minutes: 10
-          command: |
-            echo "Installing Android SDK packages…"
-            echo "y" | sdkmanager --licenses || true
-            sdkmanager --install \
-              "platform-tools" \
-              "platforms;android-34" \
-              "build-tools;34.0.0" \
-              "cmake;3.22.1" \
-              "ndk;27.0.12077973"
-
-      - name: Verify SDK components
+      - name: Install SDK packages (per-package + retry)
         run: |
-          echo "ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT:-/usr/local/lib/android/sdk}"
-          ls -la /usr/local/lib/android/sdk || true
-          /usr/local/lib/android/sdk/cmdline-tools/*/bin/sdkmanager --list | head -n 200 || true
+          set -e
+          PKGS=(
+            "platform-tools"
+            "platforms;android-34"
+            "build-tools;34.0.0"
+            "cmake;3.22.1"
+            "ndk;27.0.12077973"
+          )
+          echo "y" | sdkmanager --licenses || true
+
+          install_pkg () {
+            local p="$1"
+            for i in 1 2 3; do
+              echo "Attempt $i: installing $p"
+              if sdkmanager --install "$p"; then
+                echo "OK: $p"
+                return 0
+              fi
+              echo "Retrying $p in 10s…"
+              sleep 10
+            done
+            echo "FAILED: $p"
+            exit 1
+          }
+
+          for p in "${PKGS[@]}"; do
+            install_pkg "$p"
+          done
