CI: pinned local Android SDK with retries; keystore sanity-check; build AAB

--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -12,11 +12,13 @@ on:
 
 jobs:
   build-aab:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
+    runs-on: ubuntu-22.04
+    timeout-minutes: 70
 
     env:
       ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+      ANDROID_HOME: ${{ github.workspace }}/android-sdk
+      JAVA_HOME_17_X64: /usr/lib/jvm/temurin-17-jdk-amd64
       KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
       KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
@@ -41,17 +43,19 @@ jobs:
           channel: stable
           cache: true
 
-      # --- Debug: show PATH and any sdkmanager on PATH (should be none we use) ---
-      - name: Debug PATH and sdkmanager
+      - name: Make sure preinstalled Android SDK is not used
         shell: bash
         run: |
           set -eux
-          echo "PATH=$PATH"
-          command -v sdkmanager || true
-          ls -la /usr/local/lib/android/sdk/cmdline-tools || true
+          echo "Original PATH: $PATH"
+          # Remove common preinstalled Android SDK dirs from PATH so we never use the wrong sdkmanager
+          CLEAN_PATH=$(echo "$PATH" | tr ':' '\n' | grep -v '^/usr/local/lib/android/sdk' | paste -sd:)
+          echo "PATH=$CLEAN_PATH" >> $GITHUB_ENV
+          echo "JAVA_HOME=$JAVA_HOME_17_X64" >> $GITHUB_ENV
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
 
-      # --- Install Android SDK manually (isolated in $GITHUB_WORKSPACE/android-sdk) ---
-      - name: Install Android SDK (manual)
+      - name: Install Android cmdline-tools (local, pinned)
         shell: bash
         run: |
           set -euxo pipefail
@@ -63,40 +67,60 @@ jobs:
           rm cmdline-tools.zip
           "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --version
 
-      - name: Accept licenses
+      - name: Accept Android licenses (retry)
         shell: bash
         run: |
           set -euxo pipefail
-          yes | "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" --licenses || true
+          for i in 1 2 3; do
+            yes | "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" --licenses && break || sleep 5
+          done
 
-      - name: Install required SDK packages (each as its own arg)
+      - name: Install required SDK packages (each as its own arg, retry)
         shell: bash
         run: |
           set -euxo pipefail
-          "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" \
-            "platform-tools" \
-            "platforms;android-35" \
-            "build-tools;34.0.0" \
-            "cmake;3.22.1" \
+          PKGS=(
+            "platform-tools"
+            "platforms;android-35"
+            "build-tools;34.0.0"
+            "cmake;3.22.1"
             "ndk;27.0.12077973"
+          )
+          for i in 1 2 3; do
+            "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" "${PKGS[@]}" && break || sleep 10
+          done
+          "${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin/sdkmanager" --sdk_root="${ANDROID_SDK_ROOT}" --list | head -n 100 || true
 
-      # --- Restore keystore from secrets ---
-      - name: Restore keystore
+      - name: Restore keystore from secrets and sanity-check
         if: env.KEYSTORE_BASE64 != ''
         shell: bash
         run: |
           set -euxo pipefail
+          # Decode JKS
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
-          keytool -list -v -keystore android/app/release-keystore.jks -storepass "$KEYSTORE_PASSWORD" | grep -E "Alias name|Entry type" || true
+          # Minimal, safe check that doesn’t print private info
+          (set +x; keytool -list -keystore android/app/release-keystore.jks -storepass "$KEYSTORE_PASSWORD" >/dev/null 2>&1) || (echo "Keystore password seems wrong"; exit 1)
+
+      - name: Show Flutter/Gradle env
+        shell: bash
+        run: |
+          set -eux
+          flutter --version
+          java -version
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
+          echo "PATH=$PATH"
 
       - name: flutter pub get
         run: flutter pub get
 
-      - name: Build AAB (release)
+      - name: Build AAB (release, no icon shake)
         env:
           ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
         run: |
+          set -euxo pipefail
+          # Make absolutely sure sdkmanager/adb we rely on come from our SDK
+          echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
           flutter build appbundle --release --no-tree-shake-icons
 
       - name: Upload AAB artifact
